tests/baselines/reference/symbolProperty49.errors.txt
symbolProperty49.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== symbolProperty49.ts (1 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var Symbol;
    
        class C {
            [Symbol.iterator]() { }
        }
    }